Last minor updates

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-CACHE_DRIVER=redis
-SESSION_DRIVER=redis
+CACHE_DRIVER=file
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
